# icongen-mcp

./: ISSUE_SOLUTION_SUMMARY.md  LICENSE  README.md  log.txt  pyproject.toml
.github/workflows/: python-package.yml  release.yml
.trae/: mcp.json
.trae/documents/: 修改runcmd项目版本号并发布.md
.trae/skills/pkg-puber/: SKILL.md
.trae/skills/pkg-puber/assets/: pyproject.toml
.trae/skills/pkg-puber/references/: commands.md  config.md  workflow.md
.trae/skills/pkg-puber/scripts/: build_package.py  publish_package.py  validate_package.py
.trae/skills/skill-creator/: pkg-puber.skill
.trae/skills/skill-creator/scripts/: quick_validate.py
.trae/skills/sync-pencil-port/: SKILL.md  sync_pencil_port.py
mcp_tools_collection/: README.md  python_path_env_plan.md  winterm-mcp-python-spec.md
mcp_tools_collection/.kiro/specs/runcmd-realtime-output/: design.md  requirements.md  tasks.md
mcp_tools_collection/icogen_mcp_standalone/: README.md  pyproject.toml
mcp_tools_collection/icogen_mcp_standalone/src/icogen_mcp/: __init__.py
mcp_tools_collection/pkg_publisher_standalone/: LICENSE  README.md  pyproject.toml
mcp_tools_collection/pkg_publisher_standalone/docs/: PRD.md
mcp_tools_collection/pkg_publisher_standalone/src/pkg_publisher/: executors.py
mcp_tools_collection/runcmd_mcp_standalone/: README.md  pyproject.toml
mcp_tools_collection/runcmd_mcp_standalone/src/runcmd_mcp/: README.md  __init__.py  __main__.py  executors.py  server.py  service.py  streaming_buffer.py
mcp_tools_collection/winterm_mcp_standalone/: README.md  pyproject.toml  winterm_powershell_issue.md
mcp_tools_collection/winterm_mcp_standalone/docs/: SDD.md  powershell_sandbox_implementation.md  powershell_sandbox_solution.md
mcp_tools_collection/winterm_mcp_standalone/src/winterm_mcp/: __init__.py  __main__.py  constants.py  models.py  server.py  service.py
src/icogen_mcp/: __init__.py  __main__.py  server.py  service.py
