[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools"

[project]
name = "mcp-tools-collection"
version = "1.0.0"
description = "A collection of Model Context Protocol (MCP) tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "developer@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "icogen-mcp>=0.1.2",
    "runcmd-mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/username/mcp-tools-collection"
Repository = "https://github.com/username/mcp-tools-collection.git"
Documentation = "https://github.com/username/mcp-tools-collection/blob/main/README.md"
